syntax = "proto3";
// protoc --go_out=plugins=grpc:. *.proto

package mongogrpc;
option go_package = "/mongogrpc";

// The request message containing the user's name, message, time.
message WriteRequest {
  string time = 1;
  string message = 2;
  string name = 3;
}

// The request message containing the user's name, message, time.
message MessageInfo {
  string time = 1;
  string message = 2;
  string name = 3;
}

// The response message
message WriteResponse {
  int32 status = 1;
  string desription = 2;
}

// The writer service definition.
service Writer {
  rpc   Write(WriteRequest) returns (WriteResponse) {}
}


// Request to acquire last 'number' messages or until the time (number is the max anyway)
message ReadRequest {
  string time = 1;
  int32 number = 2;
}

message ReadResponse {
  repeated MessageInfo results = 1;
  int32 status = 2;
  string desription = 3;
}

// The writer service definition.
service Reader {
  rpc   Read(ReadRequest) returns (ReadResponse) {}
}